@@ -34,6 +34,11 @@
 	modules.
 	* pam_tcb/Makefile: Honor PAM_SO_SUFFIX variable.
 
+	pam_tcb: Apply proper soname during linking if PAM_SO_SUFFIX
+	is set.
+	* pam_tcb/Makefile: Apply proper soname with PAM_SO_SUFFIX
+	not being empty. Adapt clean target also.
+
 2021-09-25  Dmitry V. Levin  <ldv at owl.openwall.com>
 
 	Add github CI.
